# elettra

./: README  README.asc  README.md
src/: CMakeLists.txt  elettra.c  elettra.h  elettra_check.c  elettra_encrypt.c  elettra_seek.c  elettra_utils.c  elettra_zlib.c
